# vulshop

./: Makefile  docker-compose.yaml
api/: Dockerfile  api.py  pyproject.toml
app/: Dockerfile  app.py  pyproject.toml
app/static/css/: custom.css
app/templates/: admin.html  cart.html  error.html  layout.html  products.html  signin.html  signup-is-done.html  signup.html
bff/: Dockerfile  bff.py  pyproject.toml
bff/static/css/: custom.css
bff/templates/: error.html  index.html  layout.html  product.html  products.html  signup.html
mysql/: my.cnf
mysql/init/: 01_create-database.sql  10_schema.sql  20_insert.sql
