[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["shinobe179 <befs.anne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
PyMySQL = "^1.0.2"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
