[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["shinobe179 <befs.anne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
cryptography = "^39.0.1"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
